fixed contrast issues and code is now displayed upon submission

--- a/home/static/home/style.css
+++ b/home/static/home/style.css
@@ -14,6 +14,7 @@ main {
 h1 {
     padding: 10px;
     font-size: 200%;
+    width: 25%;
 }
 
 #navbar {
@@ -32,6 +33,9 @@ h1 {
 header a {
     text-decoration: none;
     color: gold;
+    background-color: rgb(128, 0, 0, 0.3);
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 #navbar a:hover {
